# sylverant-libsylverant

./: CMakeLists.txt  README.md
cmake/Modules/: FindMYSQL.cmake
include/sylverant/: Makefile.am  encryption.h  pcg_basic.h
src/encryption/: psobb-crypt.c  psogc-crypt.c  psopc-crypt.c
src/utils/: Makefile.am  checksum.c  items.c  pcg_basic.c  prs-comp.c  prs-decomp.c  shipcfg.c
